--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge - Iniciante em programação</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/0934ea43d0.js" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
+
+    <div class="container">
+
+        <div class="column1">
+
+            <img src="./img/logo_alura.svg" alt="Logotipo da Alura" id="logo">
+
+            <div class="form">
+                <textarea id="mensagem" name="mensagem" rows="5" cols="40" placeholder="Digite seu texto"></textarea>
+                <div class="note">
+                    <i class="fa-solid fa-circle-exclamation"></i>
+                    <p>Apenas letras minúsculas e sem acento</p>
+                </div>
+                <div class="divButtons">
+                    <button type="button" id="cript">Criptografar</button>
+                    <button type="button" id="descript">Descriptografar</button>
     
+                </div>
+
+            </div>
+
+        </div>
+        <div class="column2">
+
+            <div class="form-result">
+
+                <div>
+                    <img src="./img/High quality products 1 1.svg" alt="">
+                </div>
+
+                <h2>Nenhuma mensagem encontrada</h2>
+                <p>Digite um texto que você deseja criptografar ou descriptografar</p>
+
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
