add button copy

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <p>Apenas letras minúsculas e sem acento</p>
                 </div>
                 <div class="divButtons">
-                    <button type="button" id="cript">Criptografar</button>
+                    <button type="button" id="cript" onclick="cript()">Criptografar</button>
                     <button type="button" id="descript">Descriptografar</button>
-    
+
                 </div>
 
             </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="column2">
 
-            <div class="form-result">
+            <div class="form-result" id="result">
 
                 <div>
                     <img src="./img/High quality products 1 1.svg" alt="">
@@ -50,10 +50,13 @@
                 <p>Digite um texto que você deseja criptografar ou descriptografar</p>
 
             </div>
+
         </div>
 
-
     </div>
+    <footer>
+        <p>Desenvolvido por <a href="https://github.com/juliano340">Juliano Pereira    </a></p>
+    </footer>
 
 
     <script src="script.js"></script>
