add function decript

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="divButtons">
                     <button type="button" id="cript" onclick="cript()">Criptografar</button>
-                    <button type="button" id="descript">Descriptografar</button>
+                    <button type="button" id="descript" onclick="descript()">Descriptografar</button>
 
                 </div>
 
