--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
         <div class="column1">
 
-            <img src="./img/logo_alura.svg" alt="Logotipo da Alura" id="logo">
+            <a href="https://juliano340.github.io/challenge_iniciante_programacao/">
+                <img src="./img/logo_alura.svg" alt="Logotipo da Alura" id="logo">
+            </a>
 
             <div class="form">
                 <textarea id="mensagem" name="mensagem" rows="5" cols="40" placeholder="Digite seu texto"></textarea>
